data/derived/comb/progs/unify/prog5743.ml.out
Characters 146-147:
  List.fold_left f base l;;
                        ^
Error: This expression has type int list
       but an expression was expected of type string list
       Type int is not compatible with type string 
